methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:5: error: not found: value leveBrose
    baisseBrosse();leveBrose()
                   ^